--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,27 @@
+# Compiled class file
+*.class
 
-# Created by https://www.toptal.com/developers/gitignore/api/java,android
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,android
+# Log file
+*.log
 
-### Android ###
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
 # Built application files
 *.apk
 *.aar
@@ -92,35 +111,3 @@ lint/tmp/
 
 # Android Profiling
 *.hprof
-
-### Android Patch ###
-gen-external-apklibs
-output.json
-
-# Replacement of .externalNativeBuild directories introduced
-# with Android Studio 3.5.
-
-### Java ###
-# Compiled class file
-
-# Log file
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# End of https://www.toptal.com/developers/gitignore/api/java,android
