--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -35,7 +35,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.android.volley:volley:1.2.1'
-    
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
+
     testImplementation 'junit:junit:4.+'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
