--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -26,6 +26,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -36,6 +39,10 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'org.osmdroid:osmdroid-android:6.1.11'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
 
     testImplementation 'junit:junit:4.+'
 
