--- a/Project/app/src/main/AndroidManifest.xml
+++ b/Project/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.lazackna.juicefinder">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
 
     <application
         android:allowBackup="true"
@@ -11,6 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JuiceFinder">
+        <activity
+            android:name=".MapActivity"
+            android:exported="false"
+            android:label="@string/title_activity_map"
+            android:theme="@style/Theme.JuiceFinder.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -22,8 +31,8 @@
         </activity>
 
         <meta-data
-            android:name = "ocmKey"
-            android:value = "${OCM_API_KEY}"/>
+            android:name="ocmKey"
+            android:value="${OCM_API_KEY}" />
     </application>
 
 </manifest>
