--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.1.11'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     testImplementation 'junit:junit:4.+'
 
