--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -33,7 +33,7 @@ android {
 
 dependencies {
 
-    implementation 'com.github.mkergall:osmbonuspack:6.8.0'
+    implementation "com.github.mkergall:osmbonuspack:6.8.0"
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
